# portenta-h7

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: ci.yml
config/svd/: STM32H747_CM4.svd  STM32H747_CM7.svd
examples/: blinky.rs  led_blinky.rs  rtic_blinky.rs  rtic_usb_echo.rs  rtic_usb_led_ctrl.rs  usb_echo.rs  usb_led_ctrl.rs
src/: board.rs  interrupt.rs  led.rs  lib.rs  panic.rs  pmic.rs  sys.rs  user_led.rs
src/board/: mod.rs  non_async_impl.rs
src/drivers/: led.rs  mod.rs  pmic.rs
