[package]
name = "portenta-h7"
version = "0.3.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32h7xx-hal = { version = "0.14.0", features = ["stm32h747cm7", "rt", "usb_hs"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[dev-dependencies]
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
