[package]
name = "portenta-h7"
version = "0.4.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
stm32h7xx-hal = { version = "0.16.0", features = [
    "stm32h747cm7",
    "rt",
    "usb_hs",
] }
defmt = "=0.3.7"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dev-dependencies]
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5.0", features = ["cortex-m-systick"] }
static_cell = "2.1.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
